crates/rome_console/tests/markup/open_element_improper_prop_value.stderr
error: unexpected token
 --> tests/markup/open_element_improper_prop_value.rs:3:28
  |
3 |         <Emphasis property=ident />
  |                            ^^^^^
